# app/test_hypothesis.py
@@ -14,12 +14,16 @@ users_api_spec = yaml.full_load(
     (Path(__file__).parent / "openapi.yaml").read_text()
 )
 
-# API仕様の中の CreateUserSchema のポインタを取得
+# OpenAPI仕様の中で、POSTリクエスト/レスポンスの定義が記述されているポインタをそれぞれ取得
+# リクエストペイロード用
 create_user_schema = users_api_spec["components"]["schemas"]["CreateUserSchema"]
+# レスポンスペイロード用
+get_user_schema = users_api_spec["components"]["schemas"]["GetUserSchema"]
 
-# リクエストペイロードがAPI仕様に準拠しているかどうかを判断するためのヘルパー関数
 def is_valid_payload(payload, schema):
+    """引数に渡されたペイロードがAPI仕様に準拠しているかどうか検証するためのヘルパー関数"""
     try:
+        # 検証はjsonschemaのvalidate関数を使う
         jsonschema.validate(
             payload, schema=schema,
             resolver=RefResolver("", users_api_spec)
@@ -42,7 +46,7 @@ values_strategy = (
 )
 
 # テスト用のペイロードを作成
-# keyは固定でvalueは動的に生成するストラテジー
+# 1. keyは固定でvalueは動的に生成するストラテジ
 random_value_strategy = st.fixed_dictionaries(
     {
         "name": values_strategy,
@@ -51,36 +55,40 @@ random_value_strategy = st.fixed_dictionaries(
     }
 )
 
-# keyとvalueの両方を動的に生成するストラテジー
-optional_key_strategy = st.dictionaries(
-    keys=st.sampled_from(["name", "age", "email"]),
+# 2. keyとvalueの両方を動的に生成するストラテジ
+random_key_value_strategy = st.dictionaries(
+    keys=st.sampled_from(["name", "age", "email", "invalid_field"]),
     values=values_strategy,
-    min_size=0,  # 最小サイズを0にすることで空の辞書も許容
-    max_size=3   # 最大サイズをキーの数と同じに設定
+    min_size=0,
+    max_size=4
 )
 
-# 成功パターンのストラテジー
-# expected_key_value_strategy = st.fixed_dictionaries(
-#     {
-#         "name": st.text(min_size=1),
-#         "age": st.integers(min_value=0, max_value=120),
-#         "email": st.emails()
-#     }
-# )
+# 3. 期待値を含めたストラテジ
+expected_key_value_strategy = st.fixed_dictionaries(
+    {
+        "name": st.text(min_size=1),
+        "age": st.integers(min_value=0, max_value=120),
+        "email": st.emails()
+    }
+)
 
+# 1,2,3を結合したストラテジを定義
 strategy = st.fixed_dictionaries({"profile": random_value_strategy}) | \
-           st.fixed_dictionaries({"profile": optional_key_strategy})
-        #    st.fixed_dictionaries({"profile": expected_key_value_strategy})
+           st.fixed_dictionaries({"profile": random_key_value_strategy}) | \
+           st.fixed_dictionaries({"profile": expected_key_value_strategy})
 
 
-# given() を使ってHypothesisのストラテジをテスト関数に与え、payload引数を使って各テストケースを取得
+# settignsでテストケースの実行回数を指定
 @settings(verbosity=Verbosity.verbose, max_examples=1000)
+# given() に作成したストラテジを注入
 @given(strategy)
-def test_post(request_payload):
-    # テスト実行
+def test_post(request_payload): # request_payloadにはストラテジが生成した値が渡される
+    # POST /usersエンドポイントへテスト実行
     response = test_client.post("/users", json=request_payload)
-    # ペイロードがopenapi.jsonの仕様に準拠しているかどうかを判断
+    # リクエストペイロードがOpenAPI仕様に準拠しているかどうかを判断
     if is_valid_payload(request_payload, create_user_schema):
         assert response.status_code == 201
+        # リクエストが正しい場合、レスポンスペイロードがOpenAPI仕様に準拠しているかどうかを判断
+        assert is_valid_payload(response.json(), get_user_schema)
     else:
         assert response.status_code == 422
